third_party/move/move-compiler-v2/tests/checking/visibility-checker/direct_visibility_err2.move
module 0x815::a {
    package friend fun f() {}
}
